Main Screen rough draft in XML

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CS482_Blackjack</string>
+    <string name="tenDiamondsDesc">10 of Diamonds</string>
 </resources>
